--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,8 @@ dependencies:
     sdk: flutter
   intl: ^0.18.1
   shared_preferences: ^2.2.2
-
+  path_provider: ^2.1.1
+  permission_handler: ^9.3.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
